--- a/codes/index.html
+++ b/codes/index.html
@@ -10,7 +10,6 @@
   </head>
 
   <body>
-
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
         <div class="navbar-header">
@@ -41,9 +40,9 @@
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
             <li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
-            <li><a href="#">Reports</a></li>
-            <li><a href="#">Analytics</a></li>
-            <li><a href="#">Export</a></li>
+            <li><a href="parking-桃園.html">parking-桃園</a></li>
+            <li><a href="台北UBIKE Sation.html">台北UBIKE-1</a></li>
+            <li><a href="台北UBIKE.html">台北UBIKEt-2</a></li>
           </ul>
           <ul class="nav nav-sidebar">
             <li><a href="">Nav item</a></li>
@@ -62,10 +61,7 @@
           <div class="container-fluid">
             <div class="row">
               <div class="col-md-12">
-                <div class="btn-group btn-group-justified">
-                  <a id="start" type="button" class="btn btn-default">開始</a>
-                  <a id="restart" type="button" class="btn btn-default">放棄重來</a>
-                  <a id="cheat" type="button" class="btn btn-default">看答案</a>
+                <div class="btn-group btn-group-justified">                 
                 </div>
                 <br>
                 <ul id="guessResults" class="list-group">
@@ -76,12 +72,7 @@
                   </li>
                   -->
                 </ul>
-                <div class="input-group">
-                  <span class="input-group-addon" id="sizing-addon1">猜答案</span>
-                  <input id="userGuess" type="text" name="" class="form-control" value="" required="required">
-                  <span class="input-group-btn">
-                    <a id="guess" type="button" class="btn btn-default">猜!</a>
-                  </span>
+                <div class="input-group">                  
                 </div>
               </div>
             </div>
