--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <ul class="nav nav-sidebar">
             <li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
             <li><a href="parking-桃園.html">parking-桃園</a></li>
-            <li><a href="台北UBIKE Sation.html">台北UBIKE-1</a></li>
+            <li><a href="UBIKE Sation.html">台北UBIKE-1</a></li>
             <li><a href="台北UBIKE.html">台北UBIKEt-2</a></li>
           </ul>
           <ul class="nav nav-sidebar">
